--- a/todolist/package.json
+++ b/todolist/package.json
@@ -15,7 +15,8 @@
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "vue-loader": "^15.9.6",
-        "vue-template-compiler": "^2.6.12"
+        "vue-template-compiler": "^2.6.12",
+        "vuetify": "^2.4.3"
     },
     "dependencies": {
         "vue": "^2.6.12"
